bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(temp1>100 || temp2>100){
    ^